diesel_derives/src/tests/snapshots/diesel_derives__tests__declare_sql_function_aggregate_1 (sqlite).snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "#[diesel::declare_sql_function]\nextern \"SQL\" {\n    #[aggregate]\n    fn my_sum(input: Integer) -> BigInt;\n}\n"
---
#[allow(non_camel_case_types)]
pub fn my_sum<input>(input: input) -> my_sum<input>
where
    input: diesel::expression::AsExpression<Integer>,
{
    my_sum_utils::my_sum {
        input: input.as_expression(),
    }
}
#[allow(non_camel_case_types, non_snake_case)]
///The return type of [`my_sum()`](fn@my_sum)
pub type my_sum<input> = my_sum_utils::my_sum<
    <input as diesel::expression::AsExpression<Integer>>::Expression,
>;
#[doc(hidden)]
#[allow(non_camel_case_types, non_snake_case, unused_imports)]
pub(crate) mod my_sum_utils {
    use diesel::{self, QueryResult};
    use diesel::expression::{
        AsExpression, Expression, SelectableExpression, AppearsOnTable, ValidGrouping,
    };
    use diesel::query_builder::{QueryFragment, AstPass};
    use diesel::sql_types::*;
    use diesel::internal::sql_functions::*;
    use super::*;
    #[derive(Debug, Clone, Copy, diesel::query_builder::QueryId)]
    #[derive(diesel::sql_types::DieselNumericOps)]
    pub struct my_sum<input> {
        pub(super) input: input,
    }
    ///The return type of [`my_sum()`](fn@my_sum)
    pub type HelperType<input> = my_sum<<input as AsExpression<Integer>>::Expression>;
    impl<input> Expression for my_sum<input>
    where
        (input): Expression,
    {
        type SqlType = BigInt;
    }
    impl<input, __DieselInternal> SelectableExpression<__DieselInternal>
    for my_sum<input>
    where
        input: SelectableExpression<__DieselInternal>,
        Self: AppearsOnTable<__DieselInternal>,
    {}
    impl<input, __DieselInternal> AppearsOnTable<__DieselInternal> for my_sum<input>
    where
        input: AppearsOnTable<__DieselInternal>,
        Self: Expression,
    {}
    impl<input, __DieselInternal> FunctionFragment<__DieselInternal> for my_sum<input>
    where
        __DieselInternal: diesel::backend::Backend,
        input: QueryFragment<__DieselInternal>,
    {
        const FUNCTION_NAME: &'static str = "my_sum";
        #[allow(unused_assignments)]
        fn walk_arguments<'__b>(
            &'__b self,
            mut out: AstPass<'_, '__b, __DieselInternal>,
        ) -> QueryResult<()> {
            let mut needs_comma = false;
            if !self.input.is_noop(out.backend())? {
                if needs_comma {
                    out.push_sql(", ");
                }
                self.input.walk_ast(out.reborrow())?;
                needs_comma = true;
            }
            Ok(())
        }
    }
    impl<input, __DieselInternal> QueryFragment<__DieselInternal> for my_sum<input>
    where
        __DieselInternal: diesel::backend::Backend,
        input: QueryFragment<__DieselInternal>,
    {
        fn walk_ast<'__b>(
            &'__b self,
            mut out: AstPass<'_, '__b, __DieselInternal>,
        ) -> QueryResult<()> {
            out.push_sql(<Self as FunctionFragment<__DieselInternal>>::FUNCTION_NAME);
            out.push_sql("(");
            self.walk_arguments(out.reborrow())?;
            out.push_sql(")");
            Ok(())
        }
    }
    impl<input, __DieselInternal> ValidGrouping<__DieselInternal> for my_sum<input> {
        type IsAggregate = diesel::expression::is_aggregate::Yes;
    }
    impl<input> IsAggregateFunction for my_sum<input> {}
    use diesel::sqlite::{Sqlite, SqliteConnection};
    use diesel::serialize::ToSql;
    use diesel::deserialize::{FromSqlRow, StaticallySizedRow};
    use diesel::sqlite::SqliteAggregateFunction;
    use diesel::sql_types::IntoNullable;
    #[allow(dead_code)]
    /// Registers an implementation for this aggregate function on the given connection
    ///
    /// This function must be called for every `SqliteConnection` before
    /// this SQL function can be used on SQLite. The implementation must be
    /// deterministic (returns the same result given the same arguments).
    pub fn register_impl<A, input>(conn: &mut SqliteConnection) -> QueryResult<()>
    where
        A: SqliteAggregateFunction<input> + Send + 'static + ::core::panic::UnwindSafe
            + ::core::panic::RefUnwindSafe,
        A::Output: ToSql<BigInt, Sqlite>,
        input: FromSqlRow<Integer, Sqlite> + StaticallySizedRow<Integer, Sqlite>
            + ::core::panic::UnwindSafe,
    {
        conn.register_aggregate_function::<Integer, BigInt, _, _, A>("my_sum")
    }
}
